# poxchat

./: .gitignore  CLAUDE.md  Doxyfile  IRCV3_IMPLEMENTATION_PLAN.md  OAUTH_IMPLEMENTATION_PLAN.md  README.md  meson.build  readme.md
.github/workflows/: appimage-build.yml  deb-build.yml  flatpak-build.yml  macos-build.yml  msys-build.yml  release.yml  ubuntu-build.yml  windows-build.yml
.tx/: config  howto.md
data/: poxchat.gresource.xml
data/icons/: meson.build
data/icons/source/: apply_glow.py
data/man/: meson.build  poxchat.1.in
data/misc/: io.github.evilnet.PoxChat.Plugin.metainfo.xml.in  io.github.evilnet.PoxChat.ThemeManager.desktop.in  io.github.evilnet.PoxChat.ThemeManager.xml  io.github.evilnet.PoxChat.appdata.xml.in  io.github.evilnet.PoxChat.desktop.in.in  meson.build
data/pkgconfig/: meson.build  poxchat-plugin.pc.in
debian/: .gitignore  README.Debian  README.source  changelog  control  copyright  gbp.conf  poxchat-common.install  poxchat-dev.install  poxchat-lua.install  poxchat-perl.install  poxchat-plugin-checksum.install  poxchat-plugin-fishlim.install  poxchat-plugin-sysinfo.install  poxchat-python.install  poxchat.install  poxchat.lintian-overrides  rules  salsa-ci.yml  watch
debian/source/: lintian-overrides  options
debian/upstream/: metadata
docs/: IRCV3_UX_AUDIT.md  README.md  XTEXT_MODERNIZATION_PLAN.md
docs/archives/: GTK4_LISTVIEW_MIGRATION.md  GTK4_MIGRATION_PLAN.md
docs/projects/: INPUT_WIDGET_MODERNIZATION.md  IRCV3_IMPLEMENTATION_PLAN.md  TRAY_INTEGRATION_PLAN.md  WIN32_MESON_MIGRATION.md
flatpak/: Load-plugins-from-Flatpak-extensions.patch  io.github.evilnet.PoxChat.json
irctest/: poxchat.py
linux/appimage/: Dockerfile  build-appimage.sh  (+1 more)
macos/: Info.plist.in  build-app.sh  launcher.sh  make-bundle.sh  make-dmg.sh
osx/: Info.plist.in  gtkrc  launcher.sh  makebundle.sh  poxchat.bundle
plugins/: meson.build
po/: POTFILES  POTFILES.skip  af.po  am.po  ast.po  az.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  hi.po  hu.po  id.po  it.po  ja_JP.po  kn.po  ko.po  lt.po  lv.po  meson.build  mk.po  ml.po  ms.po  nb.po  nl.po  no.po  pa.po  pl.po  pt.po  (+16 more)
src/: version-script
src/common/dbus/: dbus-client.c  dbus-client.h  dbus-plugin.c  dbus-plugin.h  example.c  example.py  meson.build  org.poxchat.service.service.in  remote-object.xml
win32/: config.h.tt  poxchat.exe.manifest  poxchat.props  poxchat.sln  version-template.ps1
(+228 files in other folders)
