icondir = join_paths(get_option('datadir'), 'icons/hicolor')
install_data(
  'poxchat.png',
  rename: 'io.github.evilnet.PoxChat.png',
  install_dir: join_paths(icondir, '48x48/apps')
)
install_data(
  'poxchat.svg',
  rename: 'io.github.evilnet.PoxChat.svg',
  install_dir: join_paths(icondir, 'scalable/apps')
)
